--- a/project_html/challenge-nov.23.html
+++ b/project_html/challenge-nov.23.html
@@ -6,7 +6,7 @@
 
 <body>
   
-  <article class="product container"> 
+  <article class="product"> 
   <h2 class="h2"><strong>Converse Chuck Taylor All Star Low Top</strong></h2>
   <img class="padding" src="../images/challenges.jpg" alt="" width="500px" height="500px" />
 
@@ -15,13 +15,27 @@
   <p class="ready padding">Ready to dress up down,these classic canvas Chuck are an everyday wardrobe staple.</canvas></p>
 
   <a class="more-info" href="https://www.converse.ph/" target="_blank">More Information &rarr;</a>
+
   <h3 class="padding-h3"><strong>Product details</strong></h3>
+
+<div class="container-1">
+
+   <div class="box box-1"></div>
+   <div class="box box-2"></div>
+   <div class="box box-3"></div>
+   <div class="box box-4"></div>
+   <div class="box box-5"></div>
+   <div class="box box-6"></div>
+
+</div>
+
   <ul class="ul-padding">
     <li class="list-padding">Lightweight</li>
     <li class="list-padding">Durable canvas sneaker</li>
     <li class="list-padding">Light padded footbed for added comfort</li>
     <li class="list-padding">Iconic Chuck Taylor ankle patch</li>
   </ul>
+
 
   <footer class="button">Add to cart</footer></footer>
 
