--- a/project_html/challenge-nov.23.html
+++ b/project_html/challenge-nov.23.html
@@ -1,53 +1,55 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="../css_file/style-2.css">
-  
+  <link rel="stylesheet" href="../css_file/style-2.css" />
 </head>
 
 <body>
-  
-  <article class="product"> 
-  <h2 class="h2"><strong>Converse Chuck Taylor All Star Low Top</strong></h2>
-  <div class="product-img">
-  <img class="padding" src="../images/challenges.jpg" alt="" width="250px" height="250px" />
-</div>
-<div class="product-info">
-  <p class="padding"><strong>$65.00</strong></p>
-  <p class="shipping padding">Free shipping</p>
-  <p class="ready padding">Ready to dress up down,these classic canvas Chuck are an everyday wardrobe staple.</canvas></p>
+  <article class="product">
+    <h2 class="product-title">
+      <strong>Converse Chuck Taylor All Star Low Top</strong>
+    </h2>
 
-  <a class="more-info" href="https://www.converse.ph/" target="_blank">More Information &rarr;</a>
+    <img
+      src="../images/challenges.jpg"
+      alt="chuck taylor allstar shoe"
+      width="250px"
+      height="250px"
+      class="product-img"
+    />
+    <div class="product-info">
+      <div class="product-row">
+        <p class="price"><strong>$65.00</strong></p>
+        <p class="shipping"><strong>free shipping</strong></p>
+      </div>
+      <p class="ready">
+        Ready to dress up down,these classic canvas Chuck are an everyday
+        wardrobe staple.
+      </p>
+      <a class="more-info" href="https://www.converse.ph/" target="_blank"
+        >More Information &rarr;
+      </a>
+      <div class="colors">
+        <div class="box box-1"></div>
+        <div class="box box-2"></div>
+        <div class="box box-3"></div>
+        <div class="box box-4"></div>
+        <div class="box box-5"></div>
+        <div class="box box-6"></div>
+      </div>
+    </div>
+    <div class="product-details">
+      <h3 class="h3">
+        <strong>product details</strong>
+      </h3>
 
+      <ul class="product-list">
+        <li class="list-info">Lightweight</li>
+        <li class="list-info">Durable canvas sneaker</li>
+        <li class="list-info">Light padded footbed for added comfort</li>
+        <li class="list-info">Iconic Chuck Taylor ankle patch</li>
+      </ul>
+    </div>
 
-
-<div class="container">
-   <div class="box box-1"></div>
-   <div class="box box-2"></div>
-   <div class="box box-3"></div>
-   <div class="box box-4"></div>
-   <div class="box box-5"></div>
-   <div class="box box-6"></div>
-</div>
-
-</div>
-
-<div>
-
-  <div class="product-details">
-<h3 class="padding-h3"><strong>Product details</strong></h3>
-
-  <ul class="ul-padding">
-    <li class="list-padding">Lightweight</li>
-    <li class="list-padding">Durable canvas sneaker</li>
-    <li class="list-padding">Light padded footbed for added comfort</li>
-    <li class="list-padding">Iconic Chuck Taylor ankle patch</li>
-  </ul>
-</div>
-</div>
-
-  <footer class="footer">Add to cart</footer></footer>
-
-</article>
+    <footer class="footer">Add to cart</footer>
+  </article>
 </body>
-
-
