--- a/project_html/omnifood-copy/7-omnifood.html
+++ b/project_html/omnifood-copy/7-omnifood.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year .It's tailored to your personal tastes and nutritional needs"
+    />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="../../images/img/favicon.png" />
+    <link rel="apple-touch" href="../../images/favicon (1).png" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <link rel="stylesheet" href="../omnifood-copy/omni-food.css" />
     <link rel="stylesheet" href="../omnifood-copy/omni-style-2.css" />
     <link rel="stylesheet" href="../omnifood-copy/queries.css" />
@@ -27,7 +34,7 @@
       defer
       src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
     ></script>
-    <title>Omnifood</title>
+    <title>Omnifood &mdash; Never cook again</title>
   </head>
   <body>
     <header class="header">
